--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="msapplication-TileColor" content="#e85e00">
         <meta name="theme-color" content="#e85e00">
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -61,7 +60,7 @@
                     </figure>
                 </div>    
                 <div class="o-section o-section--lg"> 
-                    <div class="0-layout o-layout-gutter-lg">
+                    <div class="o-layout o-layout-gutter-lg">
                         <div class="o-layout__item u-1-of-2-bp3">
                             <div class="u-max-width-sm">
                                 <h1 class="c-lead c-lead--xxl u-color-primary-base">
