--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                     <a href="#!">Our story</a>
                 </p>
                 <p>
-                    <a href="#!">Our values</a>
+                    <a class="c-link-cta" href="#!">Our values</a>
                 </p>
                 <p>
-                    <a href="#!">Join our team</a>
+                    <a class="c-link-cta" href="#!">Join our team</a>
                 </p>
                 </div> 
             </div>
@@ -242,7 +242,7 @@
                     The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.
                 </p>
                 <p>
-                    <a href="#!">Open positions</a>
+                    <a class="c-link-cta" href="#!">Open positions</a>
                 </p>
             </div>    
                 
@@ -260,7 +260,7 @@
                         We will email you to start the conversation. Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                     <p>
-                        <a href="#!">Sign me up</a>
+                        <a class="c-link-cta" href="#!">Sign me up</a>
                     </p>
                 </div>
             </div>
@@ -276,17 +276,17 @@
             </h1>    
                 <nav>
                     <ul>
-                        <li><a href="#!">Contact</a></li>
-                        <li><a href="#!">Legal</a></li>
-                        <li><a href="#!">Privacy</a></li>
+                        <li><a class="c-link-cta" href="#!">Contact</a></li>
+                        <li><a class="c-link-cta" href="#!">Legal</a></li>
+                        <li><a class="c-link-cta" href="#!">Privacy</a></li>
                     </ul>
                 </nav>
 
                 <nav>
                     <ul>
-                        <li><a href="#!">Facebook</a></li>
-                        <li><a href="#!">Twitter</a></li>
-                        <li><a href="#!">LinkedIn</a></li>
+                        <li><a class="c-link-cta" href="#!">Facebook</a></li>
+                        <li><a class="c-link-cta" href="#!">Twitter</a></li>
+                        <li><a class="c-link-cta" href="#!">LinkedIn</a></li>
                     </ul>
                 </nav>
             </div>
