--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             
                 <div class="o-layout o-layout--justify-space-between">
                 <p>
-                    <a href="#!">Our story</a>
+                    <a class="c-link-cta" href="#!">Our story</a>
                 </p>
                 <p>
                     <a class="c-link-cta" href="#!">Our values</a>
